picturas-chart/templates/api-gateway/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    name: api-gateway
