picturas-chart/templates/api-gateway/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-metrics
  annotations:
    prometheus.io/port: "9121"
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 9121
      targetPort: 9121
  selector:
    name: api-gateway
